@@ -190,3 +190,5 @@ https://cnews.com.tw/%e3%80%90%e7%8d%a8%e5%ae%b6%e3%80%91%e5%8f%97uber%e7%89%bd%
 https://cnews.com.tw/%e6%96%b0%e6%bd%ae%e6%b5%81%e6%8f%92%e6%97%97%e7%a5%9e%e8%85%a6%ef%bc%81%e4%b8%ad%e8%8f%af%e9%9b%bb%e4%bf%a1%e8%91%a3%e4%ba%8b%e9%95%b7%e7%88%ad%e5%a5%aa%e6%88%b0%e6%8f%90%e5%89%8d%e9%96%8b%e6%89%93/
 http://newnet.tw/Newsletter/News.aspx?Iinfo=4&iNumber=28066
 http://newnet.tw/Newsletter/News.aspx?Iinfo=4&iNumber=28067
+https://www.thestandnews.com/politics/%E8%A5%BF%E7%92%B0%E6%B2%BB%E6%B8%AF-%E7%99%BC%E6%96%B0%E8%81%9E%E7%A8%BF%E6%8C%87%E5%85%A9%E8%BE%A6%E6%8C%89-%E5%9F%BA%E6%9C%AC%E6%B3%95-22-%E6%A2%9D%E8%A8%AD%E7%AB%8B-%E8%88%87%E4%B8%AD%E8%81%AF%E8%BE%A6%E5%85%AC%E5%91%8A%E4%B8%8D%E7%AC%A6-%E6%B8%AF%E5%BA%9C%E6%B7%B1%E5%A4%9C%E5%88%AA%E7%9B%B8%E9%97%9C%E5%AD%97%E5%8F%A5/
+https://www.thestandnews.com/culture/%E9%BB%83%E5%81%89%E6%96%87-%E5%82%BE%E5%9F%8E-%E5%8E%9F%E7%A8%BF%E5%87%BA%E5%9C%9F-1997%E5%B9%B4%E5%AF%AB%E4%BA%86%E9%80%99%E4%B8%80%E9%A6%96-%E5%A4%A7%E6%A6%82%E4%B9%9F%E4%B8%8D%E6%98%AF%E7%84%A1%E7%B7%A3%E7%84%A1%E6%95%85%E7%9A%84/
